--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 .container{
     display: flex;
     justify-content: center;
-    padding-top: 100px;
+    padding-top: 30px;
 }
 h1{
     text-align: center;
@@ -19,9 +19,8 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
+    padding: 2px;
     border: 2px solid black;
-    margin: 30px;
     box-shadow: 6px 6px 10px black;
 
  }
@@ -35,10 +34,11 @@ h3{
     color: white;
     border-radius: 18px;
     padding: 8px 20px;
-    margin-top: 18px;
+    margin:8px 0px;
     box-shadow: 2px 5px 8px black;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 17px;
+
     
 }
 .button:hover{
@@ -52,7 +52,6 @@ h3{
     height:20px;
     width: 200px;
     padding-left: 10px;
-    margin: 4px;
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     border: 1.5px solid black;
@@ -63,4 +62,5 @@ h3{
 .rating{
     font-size: 22px;
 }
+
 
