--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .text-red{
-    color: red;
+    color:#C8975F;
 }
 .container{
     display: flex;
@@ -8,7 +8,8 @@
 }
 h1{
     text-align: center;
-    font-size: 40px;
+    font-size: 60px;
+    text-shadow: 3px 1px 2px black;
 }
 h3{
     font-size: 26px;
@@ -55,6 +56,7 @@ h3{
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     border: 1.5px solid black;
+    box-shadow: 2px 3px 4px black;
 }
  label{
     font-size: 17px;
